--- a/AmbChat/app/src/main/res/layout/fragment_chats.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_chats.xml
@@ -9,42 +9,41 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ChatsFragment">
+    tools:context=".fragments.ChatsFragment">
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:src="@drawable/ic_send_pink_24dp"
-        android:id="@+id/fab"
-        android:tint="@android:color/white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:clickable="true"
+        android:src="@drawable/ic_send_pink_24dp"
+        android:tint="@android:color/white"
         app:fabSize="mini" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/fab"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@id/fab">
 
         <EditText
+            android:id="@+id/edt_mess"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Input"
-            android:id="@+id/edt_mess"
-            />
+            android:hint="Input" />
     </android.support.design.widget.TextInputLayout>
 
     <ListView
+        android:id="@+id/lv_mess"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:layout_above="@id/fab"
-        android:dividerHeight="16dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="16dp"
         android:divider="@android:color/transparent"
-        android:id="@+id/lv_mess"
-        android:layout_marginBottom="16dp"/>
+        android:dividerHeight="16dp" />
 </RelativeLayout>
