--- a/AmbChat/app/src/main/res/layout/fragment_friends.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_friends.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FriendsFragment">
+    tools:context=".fragments.FriendsFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -12,6 +12,5 @@
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@android:color/transparent">
-    </ListView>
+        android:divider="@android:color/transparent"></ListView>
 </FrameLayout>
