--- a/AmbChat/app/src/main/res/layout/activity_home.xml
+++ b/AmbChat/app/src/main/res/layout/activity_home.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginTop="5dp"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imgIconSearch"
@@ -26,56 +25,60 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:hint="Search friend" />
+
         <Button
             android:id="@+id/btnSearch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Search"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:gravity="center"
+            android:hint="Search"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:layout_weight="1"/>
+            android:textSize="18sp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:orientation="horizontal"
-        android:layout_weight="8">
+        android:layout_marginTop="16dp"
+        android:layout_weight="8"
+        android:orientation="horizontal">
 
         <ListView
             android:id="@+id/lvListFriends"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ListView>
+            android:layout_height="match_parent"></ListView>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
+
         <ImageView
             android:id="@+id/imgAcount"
             android:layout_width="0dp"
+            android:layout_height="35dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_account"
-            android:layout_height="35dp" />
+            android:src="@drawable/ic_account" />
+
         <ImageView
             android:id="@+id/imgListFriend"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/baseline_supervisor_account_black_18dp"/>
+            android:layout_weight="1"
+            android:src="@drawable/baseline_supervisor_account_black_18dp" />
 
         <ImageView
             android:id="@+id/imgListMess"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/baseline_message_black_18dp"
-            android:layout_height="wrap_content" />
+            android:src="@drawable/baseline_message_black_18dp" />
 
     </LinearLayout>
 </LinearLayout>
