--- a/AmbChat/app/src/main/res/layout/activity_main.xml
+++ b/AmbChat/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
+
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/appBarLayout">
-        <include layout="@layout/app_bar_layout" android:id="@+id/main_page_toolbar" />
+        android:layout_height="wrap_content">
+
+        <include
+            android:id="@+id/main_page_toolbar"
+            layout="@layout/app_bar_layout" />
+
         <android.support.design.widget.TabLayout
             android:id="@+id/main_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-        </android.support.design.widget.TabLayout>
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/main_tabPager"
         android:layout_width="match_parent"
@@ -24,11 +29,11 @@
         android:layout_below="@+id/appBarLayout">
 
         <fragment
-            android:name="com.ambientdigitalgroup.ambchat.FriendsFragment"
             android:id="@+id/fragment1"
-            android:layout_weight="1"
+            android:name="com.ambientdigitalgroup.ambchat.FriendsFragment"
             android:layout_width="0px"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
     </android.support.v4.view.ViewPager>
 </RelativeLayout>
