--- a/AmbChat/app/src/main/res/layout/content_main.xml
+++ b/AmbChat/app/src/main/res/layout/content_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ambientdigitalgroup.ambchat.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context=".activities.MainActivity"
+    tools:showIn="@layout/app_bar_layout">
 
     <TextView
         android:layout_width="wrap_content"
