--- a/AmbChat/app/src/main/res/layout/list_items_test.xml
+++ b/AmbChat/app/src/main/res/layout/list_items_test.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:selectableItemBackground"
-    android:layout_marginTop="50dp">
+    android:layout_marginTop="50dp"
+    android:background="?android:selectableItemBackground">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_single_image"
@@ -13,8 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="19dp"
-        android:src="@drawable/hinh_nen_dep_5"
-        />
+        android:src="@drawable/hinh_nen_dep_5" />
 
     <TextView
         android:id="@+id/txtname"
