--- a/AmbChat/app/src/main/res/layout/signup.xml
+++ b/AmbChat/app/src/main/res/layout/signup.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:layout_marginTop="16dp"
-    >
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -59,34 +59,35 @@
             <TextView
                 android:id="@+id/txtGender"
                 android:layout_width="0dp"
-                android:layout_weight="3"
                 android:layout_height="wrap_content"
+                android:layout_weight="3"
                 android:text="Gender"
                 android:textColor="#000000" />
 
             <RadioGroup
 
                 android:layout_width="0dp"
-                android:layout_weight="8"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:orientation="horizontal"
-                android:layout_marginLeft="20dp">
+                android:layout_marginLeft="20dp"
+                android:layout_weight="8"
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/radMale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Male"
+                    android:layout_marginLeft="16sp"
                     android:layout_marginRight="16sp"
-                    android:layout_marginLeft="16sp"/>
+                    android:text="Male" />
+
                 <RadioButton
                     android:id="@+id/radFemail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="FeMale"
+                    android:layout_marginLeft="16sp"
                     android:layout_marginRight="16sp"
-                    android:layout_marginLeft="16sp"/>
+                    android:text="FeMale" />
 
             </RadioGroup>
         </LinearLayout>
@@ -103,15 +104,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="Email"
-                android:textColor="#000000"
-                />
+                android:textColor="#000000" />
 
             <EditText
                 android:id="@+id/edtEmail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
-                android:inputType="textEmailAddress"/>
+                android:inputType="textEmailAddress" />
         </LinearLayout>
 
         <LinearLayout
@@ -154,8 +154,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
-                android:inputType="textPassword"
-                />
+                android:inputType="textPassword" />
         </LinearLayout>
 
         <LinearLayout
@@ -179,7 +178,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword" />
         </LinearLayout>
 
         <Button
